insersión de addEventListener

--- a/ordenCompra/index.html
+++ b/ordenCompra/index.html
@@ -86,5 +86,6 @@
     </section>
   </main>
 </body>
+<script src="../ordenCompra/orden.js"></script>
 <script src="../ordenCompra/app.js"></script>
 </html>
