--- a/inicioSesion/index.html
+++ b/inicioSesion/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medellin Parce</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="./style.css">
     <!-- <script src="./inicioSesion.js"></script> -->
     <script type="module" src="./login.js"></script>
 </head>
@@ -12,7 +12,7 @@
     <main>
         <div class="login-container">
             <div id="logo">
-                <img src="./logomedellin.webp" alt="logo">
+                <img src="./logoblanco.png" alt="logo">
             </div>
             <h1>Bienvenido a Medellin Parce</h1>
             <section>
@@ -24,7 +24,7 @@
                     <button type="submit" id="login-button">Iniciar sesión</button>
                 </form>
                 <div class="sincuenta">
-                    <p>¿No tienes una cuenta? <a href="register">Regístrate aquí</a></p>
+                    <p>¿No tienes una cuenta? <a href="">Regístrate aquí</a></p>
                 </div>
             </section>
         </div>
