--- a/ordenCompra/index.html
+++ b/ordenCompra/index.html
@@ -9,7 +9,7 @@
 <body>
   <header id="navbar">
     <div id="logo">
-        <img src="../ordenCompra/logo.jpeg" alt="logo">
+        <img src="../ordenCompra/logo medellin-parce1.png" alt="logo">
     </div>
     <nav id="nav-links">
       <a href="#">Productos</a>
@@ -17,6 +17,10 @@
       <a href="#">Nosotros</a>
       <button id="btn-register">Register</button>
       <button id="btn-login">Iniciar Sesión</button>
+      <button id="btn-carrito" class="btn-carrito">
+      🛒
+      <span id="contador-carrito">0</span>
+    </button>
     </nav>
   </header>
 
@@ -27,7 +31,7 @@
 
       <!-- Información del cliente -->
       <div id="cliente-info">
-        <h3>🧑 Información del cliente</h3>
+        <h3> 👨🏻Información del cliente</h3>
         <p><strong>Nombre:</strong> Juan Pérez</p>
         <p><strong>Documento:</strong> 123456789</p>
         <p><strong>Email:</strong> juanperez@mail.com</p>
