Ajustes estilo general y landing

--- a/inicioSesion/index.html
+++ b/inicioSesion/index.html
@@ -12,7 +12,7 @@
     <main>
         <div class="login-container">
             <div id="logo">
-                <img src="./logoblanco.png" alt="logo">
+                <img src="/paginaPrincipal/logo.png" alt="logo">
             </div>
             <h1>Bienvenido a Medellin Parce</h1>
             <section>
