--- a/paginaPrincipal/index.html
+++ b/paginaPrincipal/index.html
@@ -10,14 +10,15 @@
   <!-- Header -->
   <header>
     <div class="logo">
-      <img src="logo.png" alt="Medellín Parce Logo">
+      <a href="./index.html"><img src="logo.png" alt="Medellín Parce Logo"></a>
     </div>
     <nav>
       <ul>
-        <li><a href="#">INICIO</a></li>
-        <li><a href="#">PRODUCTOS</a></li>
+        <li><a href="index.html">INICIO</a></li>
+        <li><a href="/paginaIntermedia/index.html">PRODUCTOS</a></li>
         <li><a href="#">BLOG</a></li>
         <li><a href="#">NOSOTROS</a></li>
+        <li><a href="/inicioSesion/index.html">INICIAR SESION</a></li>
       </ul>
     </nav>
   </header>
@@ -38,9 +39,6 @@
     <h2>MEDELLIN PARCE UNA MARCA 100% PAISA.</h2>
   </section>
 
-  <!-- Catálogo -->
-  <main id="catalogo"></main>
-
   <!-- Footer -->
   <footer>
     <div class="footer-info">
@@ -53,7 +51,5 @@
       <img src="logo.png" alt="Logo Medellín Parce">
     </div>
   </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
