--- a/paginaIntermedia/index.html
+++ b/paginaIntermedia/index.html
@@ -9,14 +9,15 @@
 <body>
   <header id="navbar">
     <div id="logo">
-        <img src="../ordenCompra/logo.jpeg" alt="logo">
+        <a href="/paginaPrincipal/index.html"><img src="/paginaPrincipal/logo.png" alt="logo"></a>
     </div>
     <nav id="nav-links">
-      <a href="#">Productos</a>
-      <a href="#">Blog</a>
-      <a href="#">Nosotros</a>
-      <button id="btn-register">Register</button>
-      <button id="btn-login">Iniciar Sesión</button>
+      <a href="#">PRODUCTOS</a>
+      <a href="#">BLOG</a>
+      <a href="#">NOSOTROS</a>
+      <a href="/inicioSesion/index.html">INICIAR SESION</a>
+
+
     </nav>
   </header>
 
@@ -45,7 +46,15 @@
   </main>
 
   <footer>
-    <p>© 2025 Medellín Parce</p>
+    <div class="footer-info">
+      <p>Medellín Parce</p>
+      <p>Contacto: +57 305 2592493</p>
+      <p>Email: <a href="mailto:info.medellinparce@gmail.com">info.medellinparce@gmail.com</a></p>
+      <p>Todos los derechos reservados.</p>
+    </div>
+    <div class="footer-logo">
+      <img src="/paginaPrincipal/logo.png" alt="Logo Medellín Parce">
+    </div>
   </footer>
 </body>
 </html>
