--- a/modificacionDatos/index.html
+++ b/modificacionDatos/index.html
@@ -8,6 +8,29 @@
     <script type="module" src="./modificarDatos.js"></script>
 </head>
 <body>
+    <header>
+    <div class="logo">
+        <a href="./index.html"><img src="logo.png" alt="Medellín Parce Logo"></a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="../paginaPrincipal/home.html">INICIO</a></li>
+          <li><a href="/paginaIntermedia/index.html">PRODUCTOS</a></li>
+          <li><a href="#">BLOG</a></li>
+          <li><a href="#">NOSOTROS</a></li>
+          <div id="perfil-usuario">
+            <img src="image copy.png" alt="Icono de usuario" class="icono-usuario">
+            <div class="dropdown-contenido">
+              <a href="modificacionDatos/index.html">Mi Perfil</a>
+              <a href="../inicioSesion/index.html">Cerrar Sesión</a>
+            </div>
+
+          </div>
+          
+        </ul>
+      </nav>
+    </header>
+  
     <main>
         <div class="datos-container"></div>
             <h1>Perfil de Usuario</h1>
