--- a/paginaPrincipal/home.html
+++ b/paginaPrincipal/home.html
@@ -14,7 +14,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="index.html">INICIO</a></li>
+        <li><a href="home.html">INICIO</a></li>
         <li><a href="/paginaIntermedia/index.html">PRODUCTOS</a></li>
         <li><a href="#">BLOG</a></li>
         <li><a href="#">NOSOTROS</a></li>
