cambios de logica y diseno

--- a/inicioSesion/index.html
+++ b/inicioSesion/index.html
@@ -10,11 +10,31 @@
     
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <a href="../paginaPrincipal/home.html"><img src="../paginaPrincipal/logo.png" alt="Medellín Parce Logo"></a>
+        <nav>
+            <ul>
+              <li><a href="../paginaPrincipal/home.html">INICIO</a></li>
+              <li><a href="/paginaIntermedia/index.html">PRODUCTOS</a></li>
+              <li><a href="#">BLOG</a></li>
+              <li><a href="#">NOSOTROS</a></li>
+              <li><a href="/inicioSesion/index.html">INICIAR SESION</a></li>
+              <div id="perfil-usuario">
+                <img src="../modificacionDatos/image copy.png" alt="Icono de usuario" class="icono-usuario">
+                <div class="dropdown-contenido">
+                  <a href="../modificacionDatos/index.html">Mi Perfil</a>
+                  <a href="../inicioSesion/index.html">Cerrar Sesión</a>
+                </div>
+            </ul>
+          </nav>
+    </header>
     <main>
         <div class="login-container">
             <div id="logo">
-                <img src="/paginaPrincipal/logo.png" alt="logo">
+                <!-- <a href="../paginaPrincipal/home.html"></a><img src="/paginaPrincipal/logo.png" alt="logo"> -->
             </div>
+            
             <h1>Bienvenido a Medellin Parce</h1>
             <section>
                 <form id="login-form">
