--- a/modificacionDatos/index.html
+++ b/modificacionDatos/index.html
@@ -53,5 +53,16 @@
             <div id="toast-container"></div>
         </div>
     </main>
+    <footer>
+        <div class="footer-info">
+          <p>Medellín Parce</p>
+          <p>Contacto: +57 305 2592493</p>
+          <p>Email: <a href="mailto:info.medellinparce@gmail.com">info.medellinparce@gmail.com</a></p>
+          <p>Todos los derechos reservados.</p>
+        </div>
+        <div class="footer-logo">
+          <img src="logo.png" alt="Logo Medellín Parce">
+        </div>
+      </footer>
 </body>
 </html>
