--- a/paginaPrincipal/home.html
+++ b/paginaPrincipal/home.html
@@ -47,6 +47,16 @@
     <h2>MEDELLIN PARCE UNA MARCA 100% PAISA.</h2>
   </section>
 
+  <!-- Galería -->
+<section class="galeria">
+  <div class="grid-galeria">
+    <img src="/paginaIntermedia/imagenes/Camiseta hombre.jpg" alt="Foto 1">
+    <img src="/paginaIntermedia/imagenes/Camiseta mujer.jpg" alt="Foto 2">
+    <img src="/paginaIntermedia/imagenes/Sweaters.jpg" alt="Foto 3">
+    <img src="/paginaIntermedia/imagenes/Busos.jpg" alt="Foto 4">
+  </div>
+</section>
+
   <!-- Footer -->
   <footer>
     <div class="footer-info">
