cambios en navbar y diseño de orden de compra

--- a/ordenCompra/index.html
+++ b/ordenCompra/index.html
@@ -12,11 +12,13 @@
         <img src="../ordenCompra/logo medellin-parce1.png" alt="logo">
     </div>
     <nav id="nav-links">
-      <a href="#">Productos</a>
-      <a href="#">Blog</a>
-      <a href="#">Nosotros</a>
-      <button id="btn-register">Register</button>
-      <button id="btn-login">Iniciar Sesión</button>
+      <a href="#">PRODUCTOS</a>
+      <a href="#">BLOG</a>
+      <a href="#">NOSOTROS</a>
+<!--       <a href="#">REGISTRO</a>
+      <a href="#">INICIAR SESIÓN</a -->>
+      <!-- <button id="btn-register">Register</button> -->
+      <!-- <button id="btn-login">Iniciar Sesión</button> -->
       <button id="btn-carrito" class="btn-carrito">
       🛒
       <span id="contador-carrito">0</span>
