--- a/ordenCompra/index.html
+++ b/ordenCompra/index.html
@@ -91,6 +91,7 @@
       <button id="btn-finalizar">Finalizar compra</button>
     </section>
   </main>
+  <div id="toast-container"></div>
 </body>
 <script src="../ordenCompra/orden.js"></script>
 <script src="../ordenCompra/app.js"></script>
