--- a/ordenCompra/index.html
+++ b/ordenCompra/index.html
@@ -9,13 +9,13 @@
 <body>
   <header id="navbar">
     <div id="logo">
-        <img src="../ordenCompra/logo medellin-parce1.png" alt="logo">
+      <a href="../paginaPrincipal/index.html"> <img src="../ordenCompra/logo medellin-parce1.png" alt="logo"></a>
     </div>
     <nav id="nav-links">
       <a href="#">PRODUCTOS</a>
       <a href="#">BLOG</a>
       <a href="#">NOSOTROS</a>
-<!--       <a href="#">REGISTRO</a>
+<!--<a href="#">REGISTRO</a>
       <a href="#">INICIAR SESIÓN</a -->>
       <!-- <button id="btn-register">Register</button> -->
       <!-- <button id="btn-login">Iniciar Sesión</button> -->
