pantalla de producto mujer y arreglos logica

--- a/inicioSesion/index.html
+++ b/inicioSesion/index.html
@@ -10,7 +10,7 @@
     
 </head>
 <body>
-    <header>
+    <!-- <header>
         <div class="logo">
             <a href="../paginaPrincipal/home.html"><img src="../paginaPrincipal/logo.png" alt="Medellín Parce Logo"></a>
         <nav>
@@ -28,11 +28,11 @@
                 </div>
             </ul>
           </nav>
-    </header>
+    </header> -->
     <main>
         <div class="login-container">
             <div id="logo">
-                <!-- <a href="../paginaPrincipal/home.html"></a><img src="/paginaPrincipal/logo.png" alt="logo"> -->
+                <a href="../paginaPrincipal/home.html"></a><img src="/paginaPrincipal/logo.png" alt="logo">
             </div>
             
             <h1>Bienvenido a Medellin Parce</h1>
