--- a/ordenCompra/index.html
+++ b/ordenCompra/index.html
@@ -9,14 +9,16 @@
 <body>
   <header id="navbar">
     <div id="logo">
-        <img src="../ordenCompra/logo medellin-parce1.png" alt="logo">
+      <a href="../paginaPrincipal/index.html"> <img src="../ordenCompra/logo medellin-parce1.png" alt="logo"></a>
     </div>
     <nav id="nav-links">
-      <a href="#">Productos</a>
-      <a href="#">Blog</a>
-      <a href="#">Nosotros</a>
-      <button id="btn-register">Register</button>
-      <button id="btn-login">Iniciar Sesión</button>
+      <a href="#">PRODUCTOS</a>
+      <a href="#">BLOG</a>
+      <a href="#">NOSOTROS</a>
+<!--<a href="#">REGISTRO</a>
+      <a href="#">INICIAR SESIÓN</a -->>
+      <!-- <button id="btn-register">Register</button> -->
+      <!-- <button id="btn-login">Iniciar Sesión</button> -->
       <button id="btn-carrito" class="btn-carrito">
       🛒
       <span id="contador-carrito">0</span>
@@ -89,6 +91,7 @@
       <button id="btn-finalizar">Finalizar compra</button>
     </section>
   </main>
+  <div id="toast-container"></div>
 </body>
 <script src="../ordenCompra/orden.js"></script>
 <script src="../ordenCompra/app.js"></script>
