--- a/ordenCompra/index.html
+++ b/ordenCompra/index.html
@@ -12,7 +12,7 @@
       <a href="../paginaPrincipal/index.html"> <img src="../ordenCompra/logo medellin-parce1.png" alt="logo"></a>
     </div>
     <nav id="nav-links">
-      <a href="#">PRODUCTOS</a>
+      <a href="../paginaIntermedia/index.html">PRODUCTOS</a>
       <a href="#">BLOG</a>
       <a href="#">NOSOTROS</a>
 <!--<a href="#">REGISTRO</a>
