--- a/paginaPrincipal/home.html
+++ b/paginaPrincipal/home.html
@@ -57,6 +57,26 @@
   </div>
 </section>
 
+<!-- Formulario -->
+<section class="formulario">
+  <form>
+    <h2>Registrate y obtén un 20% de descuento en tu primera compra!</h2>
+    <div class="form-group">
+      <label for="nombre">Nombre</label>
+      <input type="text" id="nombre" name="nombre" required>
+    </div>
+    <div class="form-group">
+      <label for="email">Correo electrónico</label>
+      <input type="email" id="email" name="email" required>
+    </div>
+    <div class="form-group">
+      <label for="celular">Celular</label>
+      <input type="phone" id='celular' name="celular" required>
+    </div>
+    <button type="submit">Enviar</button>
+  </form>
+</section>
+
   <!-- Footer -->
   <footer>
     <div class="footer-info">
