botones de agregar a carrito

--- a/paginaIntermedia/productosMujer.html
+++ b/paginaIntermedia/productosMujer.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script type="module" src="../inicioSesion/login.js"></script>
+    <script src="cart.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const cartIcon = document.querySelector('.cart-icon-container');
+            const cartDropdown = document.querySelector('.cart-dropdown');
+
+            cartIcon.addEventListener('click', function(e) {
+                e.stopPropagation();
+                cartDropdown.classList.toggle('show');
+            });
+
+            document.addEventListener('click', function(e) {
+                if (!cartDropdown.contains(e.target) && !cartIcon.contains(e.target)) {
+                    cartDropdown.classList.remove('show');
+                }
+            });
+        });
+    </script>
 </head>
 <body>
     <header>
@@ -27,6 +45,13 @@
                 <a href="../inicioSesion/index.html">Cerrar Sesión</a>
               </div>
             </li>
+            <li class="cart-icon-container">
+              <i class="fas fa-shopping-cart cart-icon"></i>
+              <span class="cart-count">0</span>
+              <div class="cart-dropdown">
+                <div class="cart-content"></div>
+              </div>
+            </li>
           </ul>
         </nav>
       </header>
@@ -38,18 +63,21 @@
                 <img src="./imagenes/buzomujer.jpg" alt="Camiseta Mujer Urbana">
                 <h2 class="product-name">Chompas Mujer Urbana Medellín</h2>
                 <p class="product-price">$ 25.00</p>
+                <button class="add-to-cart-btn" onclick="addToCart('Chompas Mujer Urbana Medellín', 25.00)">Agregar</button>
             </div>
 
             <div class="product-card">
                 <img src="./imagenes/colorbuzo.jpg" alt="Camiseta Mujer Clásica">
                 <h2 class="product-name">Buzo Mujer</h2>
                 <p class="product-price">$ 22.50</p>
+                <button class="add-to-cart-btn" onclick="addToCart('Buzo Mujer', 22.50)">Agregar</button>
             </div>
 
             <div class="product-card">
                 <img src="./imagenes/variedad.jpg" alt="Camiseta Mujer Logo">
                 <h2 class="product-name">Camiseta Logo Medellín</h2>
                 <p class="product-price">$ 28.00</p>
+                <button class="add-to-cart-btn" onclick="addToCart('Camiseta Logo Medellín', 28.00)">Agregar</button>
             </div>
 
             </div>
