--- a/formularioRegistro/registro.html
+++ b/formularioRegistro/registro.html
@@ -3,49 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Medellin Parce</title>
+    <title>Registro - Medellin Parce</title>
     <link rel="stylesheet" href="./style.css">
-    <!-- <script src="./inicioSesion.js"></script> -->
-    <script type="module" src="./login.js"></script>
-    
+    <script type="module" src="./logicaRegistro.js"></script>
 </head>
 <body>
-    <!-- <header>
-        <div class="logo">
-            <a href="../paginaPrincipal/home.html"><img src="../paginaPrincipal/logo.png" alt="Medellín Parce Logo"></a>
-        <nav>
-            <ul>
-              <li><a href="../paginaPrincipal/home.html">INICIO</a></li>
-              <li><a href="/paginaIntermedia/index.html">PRODUCTOS</a></li>
-              <li><a href="#">BLOG</a></li>
-              <li><a href="#">NOSOTROS</a></li>
-              <li><a href="/inicioSesion/index.html">INICIAR SESION</a></li>
-              <div id="perfil-usuario">
-                <img src="../modificacionDatos/image copy.png" alt="Icono de usuario" class="icono-usuario">
-                <div class="dropdown-contenido">
-                  <a href="../modificacionDatos/index.html">Mi Perfil</a>
-                  <a href="../inicioSesion/index.html">Cerrar Sesión</a>
-                </div>
-            </ul>
-          </nav>
-    </header> -->
     <main>
         <div class="login-container">
             <div id="logo">
-                <a href="../paginaPrincipal/home.html"></a><img src="/paginaPrincipal/logo.png" alt="logo">
+                <a href="../paginaPrincipal/home.html"><img src="/paginaPrincipal/logo.png" alt="logo"></a>
             </div>
             
-            <h1>Bienvenido a Medellin Parce</h1>
+            <h1>Crear una cuenta</h1>
             <section>
-                <form id="login-form">
-                    <input type="text" id="username" name="username" required placeholder="Ingrese su usuario">
+                <form id="register-form">
+                    <input type="text" id="fullname" name="fullname" required placeholder="Nombre completo">
                     <br>
-                    <input type="password" id="password" name="password" required placeholder="Ingrese su contraseña">
+                    <input type="email" id="email" name="email" required placeholder="Correo electrónico">
                     <br>
-                    <button type="submit" id="login-button">Iniciar sesión</button>
+                    <input type="text" id="username" name="username" required placeholder="Nombre de usuario">
+                    <br>
+                    <input type="password" id="password" name="password" required placeholder="Contraseña">
+                    <br>
+                    <input type="password" id="confirm-password" name="confirm-password" required placeholder="Confirmar contraseña">
+                    <br>
+                    <button type="submit" id="register-button">Registrarse</button>
                 </form>
                 <div class="sincuenta">
-                    <p>¿No tienes una cuenta? <a href="../registro/index.html">Regístrate aquí</a></p>
+                    <p>¿Ya tienes cuenta? <a href="/inicioSesion/index.html">Inicia sesión aquí</a></p>
                 </div>
                 <div id="toast-container-mensaje"></div>
             </section>
