--- a/inicioSesion/index.html
+++ b/inicioSesion/index.html
@@ -32,7 +32,7 @@
     <main>
         <div class="login-container">
             <div id="logo">
-                <a href="../paginaPrincipal/home.html"></a><img src="/paginaPrincipal/logo.png" alt="logo">
+                <a href="../paginaPrincipal/home.html"><img src="/paginaPrincipal/logo.png" alt="logo"></a>
             </div>
             
             <h1>Bienvenido a Medellin Parce</h1>
@@ -45,7 +45,7 @@
                     <button type="submit" id="login-button">Iniciar sesión</button>
                 </form>
                 <div class="sincuenta">
-                    <p>¿No tienes una cuenta? <a href="../registro/index.html">Regístrate aquí</a></p>
+                    <p>¿No tienes una cuenta? <a href="/formularioRegistro/registro.html">Regístrate aquí</a></p>
                 </div>
                 <div id="toast-container-mensaje"></div>
             </section>
