Conexion pantallas temporales

--- a/paginaIntermedia/index.html
+++ b/paginaIntermedia/index.html
@@ -37,7 +37,7 @@
       <h1>NUESTROS PRODUCTOS</h1>
       <div class="grid">
         <div class="card">
-          <a href="#"><img src="./imagenes/Camiseta hombre.jpg" alt="Camisetas Hombre"></a>
+          <a href="/pantallasTemporales/index.html"><img src="./imagenes/Camiseta hombre.jpg" alt="Camisetas Hombre"></a>
           <span>CAMISETAS<br>HOMBRE</span>
         </div>
         <div class="card">
@@ -45,11 +45,11 @@
           <span>CAMISETAS<br>MUJER</span>
         </div>
         <div class="card">
-          <a href="#"><img src="./imagenes/Sweaters.jpg" alt="Sweaters"></a>
+          <a href="/pantallasTemporales/index.html"><img src="./imagenes/Sweaters.jpg" alt="Sweaters"></a>
           <span>SWEATERS</span>
         </div>
         <div class="card">
-          <a href="#"><img src="./imagenes/Busos.jpg" alt="Chompas"></a>
+          <a href="/pantallasTemporales/index.html"><img src="./imagenes/Busos.jpg" alt="Chompas"></a>
           <span>CHOMPAS</span>
         </div>
       </div>
