vinculo inicio sesión con ResumenCompra

--- a/ordenCompra/index.html
+++ b/ordenCompra/index.html
@@ -28,13 +28,9 @@
       <small id="numero-factura">#Factura</small>
 
       <!-- Información del cliente -->
-      <div id="cliente-info">
-        <h3> 👨🏻Información del cliente</h3>
-        <p><strong>Nombre:</strong> Juan Pérez</p>
-        <p><strong>Documento:</strong> 123456789</p>
-        <p><strong>Email:</strong> juanperez@mail.com</p>
-        <p><strong>Teléfono:</strong> 3012345678</p>
-      </div>
+<div id="cliente-info">
+  <!-- Los datos reales se insertan con JS -->
+</div>
 
       <!-- Productos añadidos -->
       <div id="productos">
