--- a/ordenCompra/index.html
+++ b/ordenCompra/index.html
@@ -9,7 +9,7 @@
 <body>
   <header id="navbar">
     <div id="logo">
-      <a href="../paginaPrincipal/index.html"> <img src="../ordenCompra/logo medellin-parce1.png" alt="logo"></a>
+      <a href="../paginaPrincipal/home.html"> <img src="../ordenCompra/logo medellin-parce1.png" alt="logo"></a>
     </div>
     <nav id="nav-links">
       <a href="../paginaIntermedia/index.html">PRODUCTOS</a>
