--- a/ordenCompra/index.html
+++ b/ordenCompra/index.html
@@ -5,20 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resumen de Compra</title>
   <link rel="stylesheet" href="../ordenCompra/styleOrdenCompra.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
-  <header id="navbar">
-    <div id="logo">
-      <a href="../paginaPrincipal/home.html"> <img src="../ordenCompra/logo medellin-parce1.png" alt="logo"></a>
+  <header>
+    <div class="logo">
+      <a href="../paginaPrincipal/home.html">
+        <img src="../ordenCompra/logo medellin-parce1.png" alt="logo">
+      </a>
     </div>
-    <nav id="nav-links">
-      <a href="../paginaIntermedia/index.html">PRODUCTOS</a>
-      <a href="#">BLOG</a>
-      <a href="#">NOSOTROS</a>
-      <button id="btn-carrito" class="btn-carrito">
-      🛒
-      <span id="contador-carrito">0</span>
-    </button>
+    <nav>
+      <ul>
+        <li><a href="../paginaPrincipal/home.html">INICIO</a></li>
+        <li><a href="../paginaIntermedia/index.html">PRODUCTOS</a></li>
+        <li><a href="#">BLOG</a></li>
+        <li><a href="#">NOSOTROS</a></li>
+        <li id="auth-section"><a href="../inicioSesion/index.html">INICIAR SESION</a></li>
+        <li id="perfil-usuario">
+          <img src="../modificacionDatos/image copy.png" alt="Icono de usuario" class="icono-usuario">
+          <div class="dropdown-contenido">
+            <a href="../modificacionDatos/index.html">Mi Perfil</a>
+            <a href="../inicioSesion/index.html">Cerrar Sesión</a>
+          </div>
+        </li>
+        <li class="cart-icon-container">
+          <i class="fas fa-shopping-cart cart-icon"></i>
+          <span class="cart-count">0</span>
+          <div class="cart-dropdown">
+            <div class="cart-content"></div>
+          </div>
+        </li>
+      </ul>
     </nav>
   </header>
 
@@ -28,9 +45,9 @@
       <small id="numero-factura">#Factura</small>
 
       <!-- Información del cliente -->
-<div id="cliente-info">
-  <!-- Los datos reales se insertan con JS -->
-</div>
+      <div id="cliente-info">
+        <!-- Los datos reales se insertan con JS -->
+      </div>
 
       <!-- Productos añadidos -->
       <div id="productos">
@@ -74,17 +91,51 @@
 
       <!-- Totales -->
       <div id="totales">
-        <p><strong>Subtotal:</strong> $290.000</p>
-        <p><strong>Descuento (20%):</strong> -$58.000</p>
-        <p><strong>IVA (19%):</strong> $44.180</p>
-        <h3 id="total-pagar">TOTAL A PAGAR: $276.180</h3>
+        <p><strong>Subtotal:</strong></p>
+        <p><strong>Descuento (20%):</strong></p>
+        <p><strong>IVA (19%):</strong></p>
+        <h3 id="total-pagar">TOTAL A PAGAR:</h3>
       </div>
 
       <button id="btn-finalizar">Finalizar compra</button>
     </section>
   </main>
+
+  <footer>
+    <div class="footer-info">
+      <p>Medellín Parce</p>
+      <p>Contacto: +57 305 2592493</p>
+      <p>Email: <a href="mailto:info.medellinparce@gmail.com">info.medellinparce@gmail.com</a></p>
+      <p>Todos los derechos reservados.</p>
+    </div>
+    <div class="footer-logo">
+      <img src="../paginaPrincipal/logo.png" alt="Logo Medellín Parce">
+    </div>
+  </footer>
+
   <div id="toast-container"></div>
+
+  <script src="../ordenCompra/orden.js"></script>
+  <script src="../ordenCompra/app.js"></script>
+  <script>
+    // Script para manejar el carrito dropdown
+    document.addEventListener('DOMContentLoaded', function() {
+      const cartIcon = document.querySelector('.cart-icon-container');
+      const cartDropdown = document.querySelector('.cart-dropdown');
+
+      if (cartIcon && cartDropdown) {
+        cartIcon.addEventListener('click', function(e) {
+          e.stopPropagation();
+          cartDropdown.classList.toggle('show');
+        });
+
+        document.addEventListener('click', function(e) {
+          if (!cartDropdown.contains(e.target) && !cartIcon.contains(e.target)) {
+            cartDropdown.classList.remove('show');
+          }
+        });
+      }
+    });
+  </script>
 </body>
-<script src="../ordenCompra/orden.js"></script>
-<script src="../ordenCompra/app.js"></script>
 </html>
