--- a/paginaIntermedia/productosMujer.html
+++ b/paginaIntermedia/productosMujer.html
@@ -61,7 +61,7 @@
         <div class="product-grid">
             <div class="product-card">
                 <img src="./imagenes/buzomujer.jpg" alt="Camiseta Mujer Urbana">
-                <h2 class="product-name">Chompas Mujer Urbana Medellín</h2>
+                <h2 class="product-name">Chompas Mujer Urbana</h2>
                 <p class="product-price">$ 25.00</p>
                 <button class="add-to-cart-btn" onclick="addToCart('Chompas Mujer Urbana Medellín', 25.00)">Agregar</button>
             </div>
