Organicé direcciones de src

--- a/formularioRegistro/registro.html
+++ b/formularioRegistro/registro.html
@@ -11,7 +11,7 @@
     <main>
         <div class="login-container">
             <div id="logo">
-                <a href="../paginaPrincipal/home.html"><img src="/paginaPrincipal/logo.png" alt="logo"></a>
+                <a href="../paginaPrincipal/home.html"><img src="../paginaPrincipal/logo.png" alt="logo"></a>
             </div>
             
             <h1>Crear una cuenta</h1>
@@ -30,7 +30,7 @@
                     <button type="submit" id="register-button">Registrarse</button>
                 </form>
                 <div class="sincuenta">
-                    <p>¿Ya tienes cuenta? <a href="/inicioSesion/index.html">Inicia sesión aquí</a></p>
+                    <p>¿Ya tienes cuenta? <a href="../inicioSesion/index.html">Inicia sesión aquí</a></p>
                 </div>
                 <div id="toast-container-mensaje"></div>
             </section>
