--- a/paginaPrincipal/home.html
+++ b/paginaPrincipal/home.html
@@ -50,10 +50,10 @@
   <!-- Galería -->
 <section class="galeria">
   <div class="grid-galeria">
-    <img src="/paginaIntermedia/imagenes/Camiseta hombre.jpg" alt="Foto 1">
-    <img src="/paginaIntermedia/imagenes/Camiseta mujer.jpg" alt="Foto 2">
-    <img src="/paginaIntermedia/imagenes/Sweaters.jpg" alt="Foto 3">
-    <img src="/paginaIntermedia/imagenes/Busos.jpg" alt="Foto 4">
+    <img src="../paginaIntermedia/imagenes/Camiseta hombre.jpg" alt="Foto 1">
+    <img src="../paginaIntermedia/imagenes/Camiseta mujer.jpg" alt="Foto 2">
+    <img src="../paginaIntermedia/imagenes/Sweaters.jpg" alt="Foto 3">
+    <img src="../paginaIntermedia/imagenes/Busos.jpg" alt="Foto 4">
   </div>
 </section>
 
