Añadí detalle de procuto y lo conecté con productosMujer

--- a/paginaIntermedia/productosMujer.html
+++ b/paginaIntermedia/productosMujer.html
@@ -93,5 +93,8 @@
           <img src="../paginaPrincipal/logo.png" alt="Logo Medellín Parce">
         </div>
       </footer>
+
+      <script src="../paginaIntermedia/producto.js"></script>
+      <script src="../paginaIntermedia/categoriaProducto.js"></script>
 </body>
 </html>
