--- a/detalleProducto/index.html
+++ b/detalleProducto/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script type="module" src="../inicioSesion/login.js"></script>
-    <script src="cart.js"></script>
+    <script src="../paginaIntermedia/cart.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const cartIcon = document.querySelector('.cart-icon-container');
@@ -121,6 +121,8 @@
         </div>
     </div>
 
-    <script src="./detalleProducto.js"></script>
+      <script src="../paginaIntermedia/producto.js"></script>
+      <script src="../detalleProducto/detalleProducto.js"></script>
+    
 </body>
 </html>
