--- a/ordenCompra/index.html
+++ b/ordenCompra/index.html
@@ -18,8 +18,8 @@
       <ul>
         <li><a href="../paginaPrincipal/home.html">INICIO</a></li>
         <li><a href="../paginaIntermedia/index.html">PRODUCTOS</a></li>
-        <li><a href="#">BLOG</a></li>
-        <li><a href="#">NOSOTROS</a></li>
+        <li><a href="../pantallaTemporal/index.html">BLOG</a></li>
+        <li><a href="../pantallaTemporal/index.html">NOSOTROS</a></li>
         <li id="auth-section"><a href="../inicioSesion/index.html">INICIAR SESION</a></li>
         <li id="perfil-usuario">
           <img src="../modificacionDatos/image copy.png" alt="Icono de usuario" class="icono-usuario">
