--- a/pantallaTemporal/index.html
+++ b/pantallaTemporal/index.html
@@ -11,12 +11,12 @@
   <!-- Header -->
   <header>
     <div class="logo">
-      <a href="../paginaPrincipal/home.html"><img src="/paginaPrincipal/logo.png" alt="Medellín Parce Logo"></a>
+      <a href="../paginaPrincipal/home.html"><img src="../paginaPrincipal/logo.png" alt="Medellín Parce Logo"></a>
     </div>
     <nav>
       <ul>
-        <li><a href="/paginaPrincipal/home.html">INICIO</a></li>
-        <li><a href="/paginaIntermedia/index.html">PRODUCTOS</a></li>
+        <li><a href="../paginaPrincipal/home.html">INICIO</a></li>
+        <li><a href="../paginaIntermedia/index.html">PRODUCTOS</a></li>
         <li><a href="#">BLOG</a></li>
         <li><a href="#">NOSOTROS</a></li>
         <li id="auth-section"><a href="../inicioSesion/index.html">INICIAR SESION</a></li>
