Corregí funcion carrito para que no se cierre el dropdown

--- a/paginaIntermedia/productosMujer.html
+++ b/paginaIntermedia/productosMujer.html
@@ -81,6 +81,8 @@
             </div>
 
             </div>
+            <!-- Mensaje de confirmación -->
+<div class="message" id="categoryMessage"></div>
     </main>
     <footer>
         <div class="footer-info">
