cambié letra mayúscula y color de título a DetalleProducto

--- a/detalleProducto/index.html
+++ b/detalleProducto/index.html
@@ -59,7 +59,7 @@
 
     <!-- Contenedor Principal -->
     <div class="container">
-        <h1 class="page-title">Detalle de producto</h1>
+        <h1 class="page-title">DETALLE DE PRODUCTO</h1>
         
         <div class="product-card">
             <!-- Contenedor del Producto -->
