Eliminé bonones de agregar en productosMujer

--- a/paginaIntermedia/productosMujer.html
+++ b/paginaIntermedia/productosMujer.html
@@ -63,21 +63,21 @@
                 <img src="./imagenes/buzomujer.jpg" alt="Camiseta Mujer Urbana">
                 <h2 class="product-name">Chompas Mujer Urbana</h2>
                 <p class="product-price">$ 25.00</p>
-                <button class="add-to-cart-btn" onclick="addToCart('Chompas Mujer Urbana Medellín', 25.00)">Agregar</button>
+                <!-- <button class="add-to-cart-btn" onclick="addToCart('Chompas Mujer Urbana Medellín', 25.00)">Agregar</button> -->
             </div>
 
             <div class="product-card">
                 <img src="./imagenes/colorbuzo.jpg" alt="Camiseta Mujer Clásica">
                 <h2 class="product-name">Buzo Mujer</h2>
                 <p class="product-price">$ 22.50</p>
-                <button class="add-to-cart-btn" onclick="addToCart('Buzo Mujer', 22.50)">Agregar</button>
+                <!-- <button class="add-to-cart-btn" onclick="addToCart('Buzo Mujer', 22.50)">Agregar</button> -->
             </div>
 
             <div class="product-card">
                 <img src="./imagenes/variedad.jpg" alt="Camiseta Mujer Logo">
                 <h2 class="product-name">Camiseta Logo Medellín</h2>
                 <p class="product-price">$ 28.00</p>
-                <button class="add-to-cart-btn" onclick="addToCart('Camiseta Logo Medellín', 28.00)">Agregar</button>
+                <!-- <button class="add-to-cart-btn" onclick="addToCart('Camiseta Logo Medellín', 28.00)">Agregar</button> -->
             </div>
 
             </div>
